--- a/WebDemo1/WebDemo1.csproj
+++ b/WebDemo1/WebDemo1.csproj
@@ -57,6 +57,7 @@
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="NewMeeting.aspx" />
+    <Content Include="RedirToMeeting.aspx" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
@@ -128,6 +129,13 @@
       <DependentUpon>NewMeeting.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedirToMeeting.aspx.cs">
+      <DependentUpon>RedirToMeeting.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RedirToMeeting.aspx.designer.cs">
+      <DependentUpon>RedirToMeeting.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
